--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,8 +7,33 @@
 	"logout": "Exit",
 	"back": "Back",
 	"menuScreen": "Please choose an option",
-	"dashboard" : "Dashboard",
-	"dataEntry" : "Data Entry",
-	"importData" : "Import Data",
-	"exportData" : "Export Data"
+	"dashboard": "Dashboard",
+	"dataEntry": "Data Entry",
+	"importData": "Import Data",
+	"exportData": "Export Data",
+	"t_service_level_view_data_collectors": "Service level view / Data collectors",
+	"t_service_level_questionnaires": "Service level questionnaires",
+	"t_status": "Status",
+	"t_actions": "Actions",
+	"t_individual_level_questionnaires": "Individual level questionnaires",
+	"t_total_to_be_filled": "Total to be filled",
+	"t_completion_rate": "Completion rate",
+	"t_completed": "Completed",
+	"t_in_progress": "In progress",
+	"t_not_started": "Not started",
+	"t_view_edit": "View/Edit",
+	"t_questionnaire_on_the_material_resources": "Questionnaire on the material resources",
+	"t_data_sheet_on_entries_and_exits": "Data sheet on entries and exits",
+	"t_family_type_children_s_home_questionnaire": "Family-Type Children's Home questionnaire",
+	"t_staff_working_in_the_service": "Staff working in the service",
+	"t_children_placed_in_the_service": "Children placed in the service",
+	"t_young_people_who_left_care_system": "Young people who left care system",
+	"t_patronat_family_questionnaires": "Patronat family questionnaires",
+	"t_view": "View",
+	"t_regional_level_view_coordinators": "Regional level view / Coordinators",
+	"t_details": "Details",
+	"t_export": "Export",
+	"t_filter": "Filter",
+	"t_external_evaluation_forms": "External evaluation forms",
+	"t_extenal_evaluators": "Extenal evaluators"
 }
