--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -7,8 +7,32 @@
 	"logout": "Выход",
 	"back": "Назад",
 	"menuScreen": "Пожалуйста, выберите опцию",
-	"dashboard" : "Панель приборов",
-	"dataEntry" : "Ввод данных",
-	"importData" : "Импортировать данные",
-	"exportData" : "Экспорт данных"
+	"dashboard": "Панель приборов",
+	"dataEntry": "Ввод данных",
+	"importData": "Импортировать данные",
+	"exportData": "Экспорт данных",
+	"t_service_level_view_data_collectors": "Просмотр уровня обслуживания/Сборщики данных",
+	"t_service_level_questionnaires": "Анкеты уровня обслуживания",
+	"t_status": "Положение дел",
+	"t_actions": "Действия",
+	"t_individual_level_questionnaires": "Анкеты индивидуального уровня",
+	"t_total_to_be_filled": "Итого для заполнения",
+	"t_completion_rate": "Скорость завершения",
+	"t_completed": "Завершенный",
+	"t_in_progress": "В ходе выполнения",
+	"t_not_started": "Не начался",
+	"t_view_edit": "Посмотреть/Редактировать",
+	"t_questionnaire_on_the_material_resources": "Анкета по материальной базе",
+	"t_data_sheet_on_entries_and_exits": "Паспорт на входы и выходы",
+	"t_family_type_children_s_home_questionnaire": "Анкета детского дома семейного типа",
+	"t_staff_working_in_the_service": "Сотрудники, работающие в сервисе",
+	"t_children_placed_in_the_service": "Дети помещены на службу",
+	"t_young_people_who_left_care_system": "Молодые люди, покинувшие систему опеки",
+	"t_patronat_family_questionnaires": "Семейные анкеты Патронат",
+	"t_view": "Посмотреть",
+	"t_extenal_evaluators": "t_extenal_evaluators",
+	"t_external_evaluation_forms": "t_external_evaluation_forms",
+	"t_details": "t_details",
+	"t_export": "Export",
+	"t_filter": "Filter"
 }
