--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -1,14 +1,38 @@
 {
 	"password": "Parol",
 	"username": "Tashkilot kodi",
-    "login": "Tizimga kirish",
+	"login": "Tizimga kirish",
 	"login_message": "Salom! Iltimos, tizimga kiring",
 	"empty_username_password": "Please fill in all fields",
 	"logout": "Chiqish",
 	"back": "Orqaga",
 	"menuScreen": "Iltimos, variantni tanlang",
-	"dashboard" : "Boshqaruv paneli",
-	"dataEntry" : "Kiritish",
-	"importData" : "Import qilish",
-	"exportData" : "Eksport qilish"
+	"dashboard": "Boshqaruv paneli",
+	"dataEntry": "Kiritish",
+	"importData": "Import qilish",
+	"exportData": "Eksport qilish",
+	"t_service_level_view_data_collectors": "Xizmat darajasi ko'rinishi / Ma'lumot yig'uvchilar",
+	"t_service_level_questionnaires": "Xizmat darajasi bo'yicha so'rovnomalar",
+	"t_status": "Holat",
+	"t_actions": "Harakatlar",
+	"t_individual_level_questionnaires": "Individual darajadagi anketalar",
+	"t_total_to_be_filled": "Jami to'ldirilishi kerak",
+	"t_completion_rate": "Tugatish darajasi",
+	"t_completed": "Bajarildi",
+	"t_in_progress": "Jarayonda",
+	"t_not_started": "Boshlanmagan",
+	"t_view_edit": "Ko'rish/tahrirlash",
+	"t_questionnaire_on_the_material_resources": "Moddiy resurslar bo'yicha so'rovnoma",
+	"t_data_sheet_on_entries_and_exits": "Kirish va chiqishlar bo'yicha ma'lumotlar varag'i",
+	"t_family_type_children_s_home_questionnaire": "Oila tipidagi bolalar uyi so'rovnomasi",
+	"t_staff_working_in_the_service": "Xizmatda ishlaydigan xodimlar",
+	"t_children_placed_in_the_service": "Xizmatga joylashtirilgan bolalar",
+	"t_young_people_who_left_care_system": "G'amxo'rlik tizimini tark etgan yoshlar",
+	"t_patronat_family_questionnaires": "Patronat oilasi uchun anketalar",
+	"t_view": "Ko'rinish",
+	"t_extenal_evaluators": "t_extenal_evaluators",
+	"t_external_evaluation_forms": "t_external_evaluation_forms",
+	"t_details": "t_details",
+	"t_export": "Export",
+	"t_filter": "Filter"
 }
