--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,6 +22,7 @@
 	"t_in_progress": "In progress",
 	"t_not_started": "Not started",
 	"t_view_edit": "View/Edit",
+	"t_institution_details": "Institution details",
 	"t_questionnaire_on_the_material_resources": "Questionnaire on the material resources",
 	"t_data_sheet_on_entries_and_exits": "Data sheet on entries and exits",
 	"t_family_type_children_s_home_questionnaire": "Family-Type Children's Home questionnaire",
@@ -39,5 +40,40 @@
 	"t_extenal_evaluators": "Extenal evaluators",
 	"t_import": "Import",
 	"t_reports": "Reports",
-	"t_filter_by": "Filter by"
+	"t_filter_by": "Filter by",
+	"Institution": " ========================================== ",
+	"t_institution_name": "Institution name",
+	"t_institution_code": "Institution code",
+	"t_institution_address": "Institution address",
+	"t_institution_atu_code": "Institution code of the administrative-territorial unit",
+	"t_institution_region": "Region",
+	"t_institution_district": "District",
+	"t_institution_type": "Type of institution",
+	"t_institution_type_option_0": "--- select ---",
+	"t_institution_type_group_1": "Childcare institutions:",
+	"t_institution_type_group_2": "Boarding schools:",
+	"t_institution_type_option_1": "11. Children's home (Baby home)",
+	"t_institution_type_option_1_value": "11",
+	"t_institution_type_option_2": "12. Mehribonlik house ",
+	"t_institution_type_option_2_value": "12",
+	"t_institution_type_option_3": "13. Muruvat house for children with disabilities ",
+	"t_institution_type_option_3_value": "13",
+	"t_institution_type_option_4": "21. Type I- II for deaf or with hearing impairments children ",
+	"t_institution_type_option_4_value": "21",
+	"t_institution_type_option_5": "22. Type III- IV for blind or visually impaired children",
+	"t_institution_type_option_5_value": "22",
+	"t_institution_type_option_6": "23. Type V for children with severe speech impairments",
+	"t_institution_type_option_6_value": "23",
+	"t_institution_type_option_7": "24. Type VI for children with musculoskeletal disorders",
+	"t_institution_type_option_7_value": "24",
+	"t_institution_type_option_8": "25. Type VII for children with children with slow mental development / mental disorders",
+	"t_institution_type_option_8_value": "25",
+	"t_institution_type_option_9": "26. Type VIII for children with intellectual disabilities",
+	"t_institution_type_option_9_value": "26",
+	"t_institution_type_option_0_value": "t_institution_type_option_0_value",
+	"t_no_children": "Number of children placed in the service",
+	"t_no_staff": "Number of staff working in the service",
+	"t_no_patronat": "Number of ",
+	"t_no_young_left": "Number of young people who left the care system",
+	"t_button_save": "Save"
 }
