--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,6 +4,7 @@
 	"login": "Login",
 	"login_message": "Hello! Please log in",
 	"empty_username_password": "Please fill in all fields",
+	"User error. Please login again.": "User error. Please login again.",
 	"logout": "Exit",
 	"back": "Back",
 	"menuScreen": "Please choose an option",
@@ -75,5 +76,22 @@
 	"t_no_staff": "Number of staff working in the service",
 	"t_no_patronat": "Number of ",
 	"t_no_young_left": "Number of young people who left the care system",
-	"t_button_save": "Save"
+	"t_button_save": "Save",
+	"Institution details saved.": "Institution details saved.",
+	"t_users": "Users",
+	"t_name": "t_name",
+	"t_role": "t_role",
+	"t_country": "t_country",
+	"t_city": "t_city",
+	"t_add": "t_add",
+	"t_first_name": "First name",
+	"t_last_name": "Last name",
+	"t_patronymics": "Patronymics",
+	"t_username": "Username",
+	"t_password": "Password",
+	"t_add_user": "Add user",
+	"t_position": "Position",
+	"t_profession": "Profession",
+	"t_phone": "Phone",
+	"t_email": "E-mail"
 }
