--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -4,6 +4,7 @@
 	"login": "Авторизоваться",
 	"login_message": "Привет! Пожалуйста, войдите",
 	"empty_username_password": "Please fill in all fields",
+	"User error. Please login again.": "User error. Please login again.",
 	"logout": "Выход",
 	"back": "Назад",
 	"menuScreen": "Пожалуйста, выберите опцию",
@@ -34,5 +35,48 @@
 	"t_external_evaluation_forms": "t_external_evaluation_forms",
 	"t_details": "t_details",
 	"t_export": "Export",
-	"t_filter": "Filter"
+	"t_filter": "Filter",
+	"t_institution_details": "t_institution_details",
+	"t_institution_name": "t_institution_name",
+	"t_institution_code": "t_institution_code",
+	"t_institution_address": "t_institution_address",
+	"t_institution_atu_code": "t_institution_atu_code",
+	"t_institution_region": "t_institution_region",
+	"t_institution_district": "t_institution_district",
+	"t_institution_type": "t_institution_type",
+	"t_no_children": "t_no_children",
+	"t_no_staff": "t_no_staff",
+	"t_no_young_left": "t_no_young_left",
+	"t_button_save": "t_button_save",
+	"t_institution_type_option_0": "t_institution_type_option_0",
+	"t_institution_type_option_0_value": "t_institution_type_option_0_value",
+	"t_institution_type_option_1": "t_institution_type_option_1",
+	"t_institution_type_option_1_value": "t_institution_type_option_1_value",
+	"t_institution_type_option_2": "t_institution_type_option_2",
+	"t_institution_type_option_2_value": "t_institution_type_option_2_value",
+	"t_institution_type_option_3": "t_institution_type_option_3",
+	"t_institution_type_option_3_value": "t_institution_type_option_3_value",
+	"t_institution_type_option_4": "t_institution_type_option_4",
+	"t_institution_type_option_4_value": "t_institution_type_option_4_value",
+	"t_institution_type_option_5": "t_institution_type_option_5",
+	"t_institution_type_option_5_value": "t_institution_type_option_5_value",
+	"t_institution_type_option_6": "t_institution_type_option_6",
+	"t_institution_type_option_6_value": "t_institution_type_option_6_value",
+	"t_institution_type_option_7": "t_institution_type_option_7",
+	"t_institution_type_option_7_value": "t_institution_type_option_7_value",
+	"t_institution_type_option_8": "t_institution_type_option_8",
+	"t_institution_type_option_8_value": "t_institution_type_option_8_value",
+	"t_institution_type_option_9": "t_institution_type_option_9",
+	"t_institution_type_option_9_value": "t_institution_type_option_9_value",
+	"t_institution_type_group_1": "t_institution_type_group_1",
+	"t_institution_type_group_2": "t_institution_type_group_2",
+	"t_import": "t_import",
+	"t_export_data": "t_export_data",
+	"t_users": "t_users",
+	"t_name": "t_name",
+	"t_email": "t_email",
+	"t_role": "t_role",
+	"t_country": "t_country",
+	"t_city": "t_city",
+	"t_add": "t_add"
 }
