add/edit user - WIP

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -93,5 +93,6 @@
 	"t_position": "Position",
 	"t_profession": "Profession",
 	"t_phone": "Phone",
-	"t_email": "E-mail"
+	"t_email": "E-mail",
+	"User added.": "User added."
 }
