--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -94,5 +94,10 @@
 	"t_profession": "Profession",
 	"t_phone": "Phone",
 	"t_email": "E-mail",
-	"User added.": "User added."
+	"User added.": "User added.",
+	"t_edit_user": "Edit user",
+	"User updated.": "User updated.",
+	"Please fill all fields": "Please fill all fields",
+	"User deleted.": "User deleted.",
+	"Are you sure you want to delete this user?": "Are you sure you want to delete this user?"
 }
