--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -99,5 +99,6 @@
 	"User updated.": "User updated.",
 	"Please fill all fields": "Please fill all fields",
 	"User deleted.": "User deleted.",
-	"Are you sure you want to delete this user?": "Are you sure you want to delete this user?"
+	"Are you sure you want to delete this user?": "Are you sure you want to delete this user?",
+	"ATU code must be 12 characters long": "ATU code must be 12 characters long"
 }
