--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -100,5 +100,6 @@
 	"Please fill all fields": "Please fill all fields",
 	"User deleted.": "User deleted.",
 	"Are you sure you want to delete this user?": "Are you sure you want to delete this user?",
-	"ATU code must be 12 characters long": "ATU code must be 12 characters long"
+	"ATU code must be 12 characters long": "ATU code must be 12 characters long",
+	"Please enter a valid email address": "Please enter a valid email address"
 }
