--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -5,8 +5,8 @@
 	"login_message": "Привет! Пожалуйста, войдите",
 	"empty_username_password": "Please fill in all fields",
 	"User error. Please login again.": "User error. Please login again.",
-	"logout": "Выход",
-	"back": "Назад",
+	"t_logout": "Выход",
+	"t_back": "Назад",
 	"menuScreen": "Пожалуйста, выберите опцию",
 	"dashboard": "Панель приборов",
 	"dataEntry": "Ввод данных",
