--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -4,8 +4,8 @@
 	"login": "Tizimga kirish",
 	"login_message": "Salom! Iltimos, tizimga kiring",
 	"empty_username_password": "Please fill in all fields",
-	"logout": "Chiqish",
-	"back": "Orqaga",
+	"t_logout": "Chiqish",
+	"t_back": "Orqaga",
 	"menuScreen": "Iltimos, variantni tanlang",
 	"dashboard": "Boshqaruv paneli",
 	"dataEntry": "Kiritish",
