--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -5,13 +5,25 @@
 	"login_message": "Привет! Пожалуйста, войдите",
 	"empty_username_password": "Please fill in all fields",
 	"User error. Please login again.": "User error. Please login again.",
-	"t_logout": "Выход",
-	"t_back": "Назад",
+	"logout": "Выход",
+	"back": "Назад",
 	"menuScreen": "Пожалуйста, выберите опцию",
 	"dashboard": "Панель приборов",
 	"dataEntry": "Ввод данных",
 	"importData": "Импортировать данные",
 	"exportData": "Экспорт данных",
+	"Institution details saved.": "Данные об учреждении сохранены.",
+	"User updated.": "Пользователь обновлен.",
+	"Please fill all fields": "Пожалуйста заполните все поля",
+	"User deleted.": "Пользователь удален.",
+	"Are you sure you want to delete this user?": "Вы уверены, что хотите удалить этого пользователя?",
+	"ATU code must be 12 characters long": "Код ATЭ е должен состоять из 12 символов.",
+	"Please enter a valid email address": "Пожалуйста, введите действительный адрес электронной почты",
+	"Instrument error.": "Ошибка прибора.",
+	"User added.": "Пользователь добавлен.",
+	"Institution": " ========================================== ",
+
+
 	"t_service_level_view_data_collectors": "Просмотр уровня обслуживания/Сборщики данных",
 	"t_service_level_questionnaires": "Анкеты уровня обслуживания",
 	"t_status": "Положение дел",
@@ -23,6 +35,7 @@
 	"t_in_progress": "В ходе выполнения",
 	"t_not_started": "Не начался",
 	"t_view_edit": "Посмотреть/Редактировать",
+	"t_institution_details": "Подробности об учреждении",
 	"t_questionnaire_on_the_material_resources": "Анкета по материальной базе",
 	"t_data_sheet_on_entries_and_exits": "Паспорт на входы и выходы",
 	"t_family_type_children_s_home_questionnaire": "Анкета детского дома семейного типа",
@@ -31,52 +44,65 @@
 	"t_young_people_who_left_care_system": "Молодые люди, покинувшие систему опеки",
 	"t_patronat_family_questionnaires": "Семейные анкеты Патронат",
 	"t_view": "Посмотреть",
-	"t_extenal_evaluators": "t_extenal_evaluators",
-	"t_external_evaluation_forms": "t_external_evaluation_forms",
-	"t_details": "t_details",
-	"t_export": "Export",
-	"t_filter": "Filter",
-	"t_institution_details": "t_institution_details",
-	"t_institution_name": "t_institution_name",
-	"t_institution_code": "t_institution_code",
-	"t_institution_address": "t_institution_address",
-	"t_institution_atu_code": "t_institution_atu_code",
-	"t_institution_region": "t_institution_region",
-	"t_institution_district": "t_institution_district",
-	"t_institution_type": "t_institution_type",
-	"t_no_children": "t_no_children",
-	"t_no_staff": "t_no_staff",
-	"t_no_young_left": "t_no_young_left",
-	"t_button_save": "t_button_save",
-	"t_institution_type_option_0": "t_institution_type_option_0",
+	"t_regionalCoordinator_level_view_regionalCoordinators": "Представление на уровне регионального координатора / региональные координаторы",
+	"t_details": "Подробности",
+	"t_export": "Экспорт",
+	"t_export_data": "Экспорт данных",
+	"t_filter": "Фильтр",
+	"t_filter_by": "Сортировать по",
+	"t_external_evaluation_forms": "Формы внешней оценки",
+	"t_extenal_evaluators": "Внешние оценщики",
+	"t_import": "Импортировать",
+	"t_reports": "Отчеты",
+	"t_institution_name": "Название учебного заведения",
+	"t_institution_code": "Код учреждения",
+	"t_institution_address": "Адрес учреждения",
+	"t_institution_atu_code": "Учрежденческий код административно-территориальной единицы",
+	"t_institution_region": "Область",
+	"t_institution_district": "Округ",
+	"t_institution_type": "Тип учреждения",
+	"t_institution_type_option_0": "--- выбирать ---",
 	"t_institution_type_option_0_value": "t_institution_type_option_0_value",
-	"t_institution_type_option_1": "t_institution_type_option_1",
-	"t_institution_type_option_1_value": "t_institution_type_option_1_value",
-	"t_institution_type_option_2": "t_institution_type_option_2",
-	"t_institution_type_option_2_value": "t_institution_type_option_2_value",
-	"t_institution_type_option_3": "t_institution_type_option_3",
-	"t_institution_type_option_3_value": "t_institution_type_option_3_value",
-	"t_institution_type_option_4": "t_institution_type_option_4",
-	"t_institution_type_option_4_value": "t_institution_type_option_4_value",
-	"t_institution_type_option_5": "t_institution_type_option_5",
-	"t_institution_type_option_5_value": "t_institution_type_option_5_value",
-	"t_institution_type_option_6": "t_institution_type_option_6",
-	"t_institution_type_option_6_value": "t_institution_type_option_6_value",
-	"t_institution_type_option_7": "t_institution_type_option_7",
-	"t_institution_type_option_7_value": "t_institution_type_option_7_value",
-	"t_institution_type_option_8": "t_institution_type_option_8",
-	"t_institution_type_option_8_value": "t_institution_type_option_8_value",
-	"t_institution_type_option_9": "t_institution_type_option_9",
-	"t_institution_type_option_9_value": "t_institution_type_option_9_value",
-	"t_institution_type_group_1": "t_institution_type_group_1",
-	"t_institution_type_group_2": "t_institution_type_group_2",
-	"t_import": "t_import",
-	"t_export_data": "t_export_data",
-	"t_users": "t_users",
-	"t_name": "t_name",
-	"t_email": "t_email",
-	"t_role": "t_role",
-	"t_country": "t_country",
-	"t_city": "t_city",
-	"t_add": "t_add"
+	"t_institution_type_group_1": "Детские учреждения:",
+	"t_institution_type_group_2": "Школ-интернатов:",
+	"t_institution_type_option_1": "11. Детский дом (Дом ребенка)",
+	"t_institution_type_option_1_value": "11",
+	"t_institution_type_option_2": "12. Дом Мехрибонлик",
+	"t_institution_type_option_2_value": "12",
+	"t_institution_type_option_3": "13. Муруватский дом для детей с ограниченными возможностями.",
+	"t_institution_type_option_3_value": "13",
+	"t_institution_type_option_4": "21. Тип I-II для глухих или слабослышащих детей.",
+	"t_institution_type_option_4_value": "21",
+	"t_institution_type_option_5": "22. Тип III-IV для слепых или слабовидящих детей.",
+	"t_institution_type_option_5_value": "22",
+	"t_institution_type_option_6": "23. V тип для детей с тяжелыми нарушениями речи.",
+	"t_institution_type_option_6_value": "23",
+	"t_institution_type_option_7": "24. VI тип для детей с нарушениями опорно-двигательного аппарата.",
+	"t_institution_type_option_7_value": "24",
+	"t_institution_type_option_8": "25. Тип VII для детей с детьми с задержкой психического развития/психическими расстройствами.",
+	"t_institution_type_option_8_value": "25",
+	"t_institution_type_option_9": "26. Тип VIII для детей с ограниченными интеллектуальными возможностями.",
+	"t_institution_type_option_9_value": "26",
+	"t_no_children": "Количество детей, помещенных на службу",
+	"t_no_staff": "Количество сотрудников, работающих в сервисе",
+	"t_no_patronat": "Количество",
+	"t_no_young_left": "Число молодых людей, покинувших систему опеки",
+	"t_button_save": "Сохранять",
+	"t_users": "Пользователи",
+	"t_name": "Имя",
+	"t_email": "Электронная почта",
+	"t_role": "Роль",
+	"t_country": "Страна",
+	"t_city": "Город",
+	"t_add": "Добавлять",
+	"t_first_name": "Имя",
+	"t_last_name": "Фамилия",
+	"t_patronymics": "Отчество",
+	"t_username": "Имя пользователя",
+	"t_password": "Пароль",
+	"t_add_user": "Добавить пользователя",
+	"t_position": "Позиция",
+	"t_profession": "Профессия",
+	"t_phone": "Телефон",
+	"t_edit_user": "Изменить пользователя"
 }
