--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -4,13 +4,26 @@
 	"login": "Tizimga kirish",
 	"login_message": "Salom! Iltimos, tizimga kiring",
 	"empty_username_password": "Please fill in all fields",
-	"t_logout": "Chiqish",
-	"t_back": "Orqaga",
+	"logout": "Chiqish",
+	"back": "Orqaga",
 	"menuScreen": "Iltimos, variantni tanlang",
 	"dashboard": "Boshqaruv paneli",
 	"dataEntry": "Kiritish",
 	"importData": "Import qilish",
 	"exportData": "Eksport qilish",
+	"Institution details saved.": "Tashkilot tafsilotlari saqlandi.",
+	"User updated.": "Foydalanuvchi yangilandi.",
+	"Please fill all fields": "Iltimos, barcha maydonlarni to'ldiring",
+	"User deleted.": "Foydalanuvchi o'chirildi.",
+	"Are you sure you want to delete this user?": "Bu foydalanuvchini o'chirib tashlamoqchimisiz?",
+	"ATU code must be 12 characters long": "MHB kodi 12 belgidan iborat bo'lishi kerak",
+	"Please enter a valid email address": "Iltimos, to'g'ri e-pochta manzilini kiriting",
+	"Instrument error.": "Asbob xatosi.",
+	"User added.": "Foydalanuvchi qo'shildi.",
+	"Institution": " ========================================== ",
+
+
+
 	"t_service_level_view_data_collectors": "Xizmat darajasi ko'rinishi / Ma'lumot yig'uvchilar",
 	"t_service_level_questionnaires": "Xizmat darajasi bo'yicha so'rovnomalar",
 	"t_status": "Holat",
@@ -22,6 +35,7 @@
 	"t_in_progress": "Jarayonda",
 	"t_not_started": "Boshlanmagan",
 	"t_view_edit": "Ko'rish/tahrirlash",
+	"t_institution_details": "Tashkilot tafsilotlari",
 	"t_questionnaire_on_the_material_resources": "Moddiy resurslar bo'yicha so'rovnoma",
 	"t_data_sheet_on_entries_and_exits": "Kirish va chiqishlar bo'yicha ma'lumotlar varag'i",
 	"t_family_type_children_s_home_questionnaire": "Oila tipidagi bolalar uyi so'rovnomasi",
@@ -30,52 +44,65 @@
 	"t_young_people_who_left_care_system": "G'amxo'rlik tizimini tark etgan yoshlar",
 	"t_patronat_family_questionnaires": "Patronat oilasi uchun anketalar",
 	"t_view": "Ko'rinish",
-	"t_extenal_evaluators": "t_extenal_evaluators",
-	"t_external_evaluation_forms": "t_external_evaluation_forms",
-	"t_details": "t_details",
-	"t_export": "Export",
-	"t_filter": "Filter",
-	"t_institution_details": "t_institution_details",
-	"t_institution_name": "t_institution_name",
-	"t_institution_code": "t_institution_code",
-	"t_institution_address": "t_institution_address",
-	"t_institution_atu_code": "t_institution_atu_code",
-	"t_institution_region": "t_institution_region",
-	"t_institution_district": "t_institution_district",
-	"t_institution_type": "t_institution_type",
-	"t_no_children": "t_no_children",
-	"t_no_staff": "t_no_staff",
-	"t_no_young_left": "t_no_young_left",
-	"t_button_save": "t_button_save",
-	"t_institution_type_option_0": "t_institution_type_option_0",
+	"t_regionalCoordinator_level_view_regionalCoordinators": "Mintaqaviy koordinator darajasidagi ko'rinish / mintaqaviy koordinatorlar",
+	"t_details": "Tafsilotlar",
+	"t_export": "Eksport",
+	"t_export_data": "Ma'lumotlarni eksport qilish",
+	"t_filter": "Filtr",
+	"t_filter_by": "Filtrlash",
+	"t_external_evaluation_forms": "Tashqi baholash shakllari",
+	"t_extenal_evaluators": "Ekstensial baholovchilar",
+	"t_import": "Import",
+	"t_reports": "Hisobotlar",
+	"t_institution_name": "Tashkilot nomi",
+	"t_institution_code": "Tashkilot kodi",
+	"t_institution_address": "Tashkilot manzili",
+	"t_institution_atu_code": "Ma'muriy-hududiy birlikning muassasa kodeksi",
+	"t_institution_region": "Mintaqa",
+	"t_institution_district": "Tuman",
+	"t_institution_type": "Tashkilot turi",
+	"t_institution_type_option_0": "--- tanlang ---",
 	"t_institution_type_option_0_value": "t_institution_type_option_0_value",
-	"t_institution_type_option_1": "t_institution_type_option_1",
-	"t_institution_type_option_1_value": "t_institution_type_option_1_value",
-	"t_institution_type_option_2": "t_institution_type_option_2",
-	"t_institution_type_option_2_value": "t_institution_type_option_2_value",
-	"t_institution_type_option_3": "t_institution_type_option_3",
-	"t_institution_type_option_3_value": "t_institution_type_option_3_value",
-	"t_institution_type_option_4": "t_institution_type_option_4",
-	"t_institution_type_option_4_value": "t_institution_type_option_4_value",
-	"t_institution_type_option_5": "t_institution_type_option_5",
-	"t_institution_type_option_5_value": "t_institution_type_option_5_value",
-	"t_institution_type_option_6": "t_institution_type_option_6",
-	"t_institution_type_option_6_value": "t_institution_type_option_6_value",
-	"t_institution_type_option_7": "t_institution_type_option_7",
-	"t_institution_type_option_7_value": "t_institution_type_option_7_value",
-	"t_institution_type_option_8": "t_institution_type_option_8",
-	"t_institution_type_option_8_value": "t_institution_type_option_8_value",
-	"t_institution_type_option_9": "t_institution_type_option_9",
-	"t_institution_type_option_9_value": "t_institution_type_option_9_value",
-	"t_institution_type_group_1": "t_institution_type_group_1",
-	"t_institution_type_group_2": "t_institution_type_group_2",
-	"t_import": "t_import",
-	"t_export_data": "t_export_data",
-	"t_users": "t_users",
-	"t_name": "t_name",
-	"t_email": "t_email",
-	"t_role": "t_role",
-	"t_country": "t_country",
-	"t_city": "t_city",
-	"t_add": "t_add"
+	"t_institution_type_group_1": "Bolalar bog'chasi:",
+	"t_institution_type_group_2": "Maktab-internatlar:",
+	"t_institution_type_option_1": "11. Bolalar uyi (Bolalar uyi)",
+	"t_institution_type_option_1_value": "11",
+	"t_institution_type_option_2": "12. Mehribonlik uyi",
+	"t_institution_type_option_2_value": "12",
+	"t_institution_type_option_3": "13. Imkoniyati cheklangan bolalar uchun “Muruvat” uyi",
+	"t_institution_type_option_3_value": "13",
+	"t_institution_type_option_4": "21. Kar yoki eshitish qobiliyati zaif bolalar uchun I-II tip",
+	"t_institution_type_option_4_value": "21",
+	"t_institution_type_option_5": "22. Ko'zi ojiz yoki zaif ko'ruvchi bolalar uchun III-IV tip",
+	"t_institution_type_option_5_value": "22",
+	"t_institution_type_option_6": "23. Og'ir nutq nuqsonlari bo'lgan bolalar uchun V tip",
+	"t_institution_type_option_6_value": "23",
+	"t_institution_type_option_7": "24. Tayanch-harakat apparati nuqsonlari bo'lgan bolalar uchun VI tip",
+	"t_institution_type_option_7_value": "24",
+	"t_institution_type_option_8": "25. Aqliy rivojlanishi sust/ruhiy buzilishlari bor bolalar uchun VII tip",
+	"t_institution_type_option_8_value": "25",
+	"t_institution_type_option_9": "26. Aqli zaif bolalar uchun VIII toifa",
+	"t_institution_type_option_9_value": "26",
+	"t_no_children": "Xizmatga joylashtirilgan bolalar soni",
+	"t_no_staff": "Xizmatda ishlaydigan xodimlar soni",
+	"t_no_patronat": "soni",
+	"t_no_young_left": "Qariyalar tizimini tark etgan yoshlar soni",
+	"t_button_save": "Saqlash",
+	"t_users": "Foydalanuvchilar",
+	"t_name": "Ism",
+	"t_email": "Elektron pochta",
+	"t_role": "Rol",
+	"t_country": "Mamlakat",
+	"t_city": "Shahar",
+	"t_add": "Qo'shish",
+	"t_first_name": "Ism",
+	"t_last_name": "Familiya",
+	"t_patronymics": "Ota ismi",
+	"t_username": "Foydalanuvchi nomi",
+	"t_password": "Parol",
+	"t_add_user": "Foydalanuvchi qo'shish",
+	"t_position": "Lavozim",
+	"t_profession": "Kasb-hunar",
+	"t_phone": "Telefon",
+	"t_edit_user": "Foydalanuvchini tahrirlash"
 }
