--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,13 +5,25 @@
 	"login_message": "Hello! Please log in",
 	"empty_username_password": "Please fill in all fields",
 	"User error. Please login again.": "User error. Please login again.",
-	"t_logout": "Exit",
-	"t_back": "Back",
+	"logout": "Exit",
+	"back": "Back",
 	"menuScreen": "Please choose an option",
 	"dashboard": "Dashboard",
 	"dataEntry": "Data Entry",
 	"importData": "Import Data",
 	"exportData": "Export Data",
+	"Institution details saved.": "Institution details saved.",
+	"User updated.": "User updated.",
+	"Please fill all fields": "Please fill all fields",
+	"User deleted.": "User deleted.",
+	"Are you sure you want to delete this user?": "Are you sure you want to delete this user?",
+	"ATU code must be 12 characters long": "ATU code must be 12 characters long",
+	"Please enter a valid email address": "Please enter a valid email address",
+	"Instrument error.": "Instrument error.",
+	"User added.": "User added.",
+	"Institution": " ========================================== ",
+
+
 	"t_service_level_view_data_collectors": "Service level view / Data collectors",
 	"t_service_level_questionnaires": "Service level questionnaires",
 	"t_status": "Status",
@@ -32,17 +44,16 @@
 	"t_young_people_who_left_care_system": "Young people who left care system",
 	"t_patronat_family_questionnaires": "Patronat family questionnaires",
 	"t_view": "View",
-	"t_regionalCoordinator_level_view_regionalCoordinators": "regionalCoordinator level view / regionalCoordinators",
+	"t_regionalCoordinator_level_view_regionalCoordinators": "Regional coordinator level view / regional coordinators",
 	"t_details": "Details",
 	"t_export": "Export",
 	"t_export_data": "Export Data",
 	"t_filter": "Filter",
+	"t_filter_by": "Filter by",
 	"t_external_evaluation_forms": "External evaluation forms",
 	"t_extenal_evaluators": "Extenal evaluators",
 	"t_import": "Import",
 	"t_reports": "Reports",
-	"t_filter_by": "Filter by",
-	"Institution": " ========================================== ",
 	"t_institution_name": "Institution name",
 	"t_institution_code": "Institution code",
 	"t_institution_address": "Institution address",
@@ -51,6 +62,7 @@
 	"t_institution_district": "District",
 	"t_institution_type": "Type of institution",
 	"t_institution_type_option_0": "--- select ---",
+	"t_institution_type_option_0_value": "t_institution_type_option_0_value",
 	"t_institution_type_group_1": "Childcare institutions:",
 	"t_institution_type_group_2": "Boarding schools:",
 	"t_institution_type_option_1": "11. Children's home (Baby home)",
@@ -71,19 +83,18 @@
 	"t_institution_type_option_8_value": "25",
 	"t_institution_type_option_9": "26. Type VIII for children with intellectual disabilities",
 	"t_institution_type_option_9_value": "26",
-	"t_institution_type_option_0_value": "t_institution_type_option_0_value",
 	"t_no_children": "Number of children placed in the service",
 	"t_no_staff": "Number of staff working in the service",
 	"t_no_patronat": "Number of ",
 	"t_no_young_left": "Number of young people who left the care system",
 	"t_button_save": "Save",
-	"Institution details saved.": "Institution details saved.",
 	"t_users": "Users",
-	"t_name": "t_name",
-	"t_role": "t_role",
-	"t_country": "t_country",
-	"t_city": "t_city",
-	"t_add": "t_add",
+	"t_name": "Name",
+	"t_email": "E-mail",
+	"t_role": "Role",
+	"t_country": "Country",
+	"t_city": "City",
+	"t_add": "Add",
 	"t_first_name": "First name",
 	"t_last_name": "Last name",
 	"t_patronymics": "Patronymics",
@@ -93,14 +104,5 @@
 	"t_position": "Position",
 	"t_profession": "Profession",
 	"t_phone": "Phone",
-	"t_email": "E-mail",
-	"User added.": "User added.",
-	"t_edit_user": "Edit user",
-	"User updated.": "User updated.",
-	"Please fill all fields": "Please fill all fields",
-	"User deleted.": "User deleted.",
-	"Are you sure you want to delete this user?": "Are you sure you want to delete this user?",
-	"ATU code must be 12 characters long": "ATU code must be 12 characters long",
-	"Please enter a valid email address": "Please enter a valid email address",
-	"Instrument error.": "Instrument error."
+	"t_edit_user": "Edit user"
 }
