--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -3,8 +3,8 @@
 	"username": "Код учреждения",
 	"login": "Авторизоваться",
 	"login_message": "Привет! Пожалуйста, войдите",
-	"empty_username_password": "Please fill in all fields",
-	"User error. Please login again.": "User error. Please login again.",
+	"empty_username_password": "Пожалуйста, заполните все поля",
+	"User error. Please login again.": "Ошибка пользователя. Пожалуйста, войдите снова.",
 	"logout": "Выход",
 	"back": "Назад",
 	"menuScreen": "Пожалуйста, выберите опцию",
