--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -17,7 +17,7 @@
 	"Please fill all fields": "Пожалуйста заполните все поля",
 	"User deleted.": "Пользователь удален.",
 	"Are you sure you want to delete this user?": "Вы уверены, что хотите удалить этого пользователя?",
-	"ATU code must be 12 characters long": "Код ATЭ е должен состоять из 12 символов.",
+	"ATU code must be 12 characters long": "Код ATE е должен состоять из 12 символов.",
 	"Please enter a valid email address": "Пожалуйста, введите действительный адрес электронной почты",
 	"Instrument error.": "Ошибка прибора.",
 	"User added.": "Пользователь добавлен.",
