--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -22,8 +22,6 @@
 	"Instrument error.": "Asbob xatosi.",
 	"User added.": "Foydalanuvchi qo'shildi.",
 	"Institution": " ========================================== ",
-
-
 	"t_service_level_view_data_collectors": "Xizmat darajasi ko'rinishi / Ma'lumot yig'uvchilar",
 	"t_service_level_questionnaires": "Xizmat darajasi bo'yicha so'rovnomalar",
 	"t_status": "Holat",
@@ -104,5 +102,8 @@
 	"t_position": "Lavozim",
 	"t_profession": "Kasb-hunar",
 	"t_phone": "Telefon",
-	"t_edit_user": "Foydalanuvchini tahrirlash"
+	"t_edit_user": "Foydalanuvchini tahrirlash",
+	"t_cpis_list": "t_cpis_list",
+	"t_add_child": "t_add_child",
+	"t_pin": "t_pin"
 }
