--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -105,9 +105,16 @@
 	"t_edit_user": "Edit user",
 	"t_cpis_list": "CPIS list",
 	"t_add_child": "Add child",
+	"t_csr_list": "Staff Registry List",
+	"t_add_staff": "Add staff",
 	"t_pin": "PIN",
 	"Instrument saved.": "Instrument saved.",
 	"Completati corect toate campurile!": "Completati corect toate campurile!",
 	"The following fields are mandatory: PIN, LK1a, LK1b, LK1c!": "The following fields are mandatory: PIN, LK1a, LK1b, LK1c!",
-	"t_choose": "--- choose ---"
+	"t_choose": "--- choose ---",
+	"The following fields are mandatory: E1, EUID!": "The following fields are mandatory: E1, EUID!",
+	"t_euid": "EUID",
+	"t_id": "ID",
+	"Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
+	"Item deleted.": "Item deleted."
 }
