--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -106,5 +106,9 @@
 	"t_cpis_list": "t_cpis_list",
 	"t_add_child": "t_add_child",
 	"t_pin": "t_pin",
-	"t_choose": "--- chooseUZ ---"
+	"t_choose": "--- chooseUZ ---",
+	"t_csr_list": "t_csr_list",
+	"t_add_staff": "t_add_staff",
+	"t_id": "t_id",
+	"t_euid": "t_euid"
 }
