--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -116,5 +116,7 @@
 	"t_euid": "EUID",
 	"t_id": "ID",
 	"Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
-	"Item deleted.": "Item deleted."
+	"Item deleted.": "Item deleted.",
+	"t_ftch_list": "Family-Type Children's Home List",
+	"t_add_family_home": "Add Family Home"
 }
