--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -118,5 +118,7 @@
 	"Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
 	"Item deleted.": "Item deleted.",
 	"t_ftch_list": "Family-Type Children's Home List",
-	"t_add_family_home": "Add Family Home"
+	"t_add_family_home": "Add Family Home",
+	"Value_up_to_ten": "The value must be up to 10",
+	"Start_before_end": "Admission date before exit date"
 }
