update validari CPIS

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -126,5 +126,7 @@
 	"t_notatall_value": "1",
 	"t_total": "10. Total",
 	"t_total_value": "10",
-	"The following fields are mandatory: IFM1, IFM2, IFM3!": "The following fields are mandatory: IFM1, IFM2, IFM3!"
+	"The following fields are mandatory: IFM1, IFM2, IFM3!": "The following fields are mandatory: IFM1, IFM2, IFM3!",
+	"At_least_one_disability": "At least one disability",
+	"At_least_one_brother_or_sister": "At least one brother or sister"
 }
