--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -128,5 +128,7 @@
 	"t_total_value": "10",
 	"The following fields are mandatory: IFM1, IFM2, IFM3!": "The following fields are mandatory: IFM1, IFM2, IFM3!",
 	"At_least_one_disability": "At least one disability",
-	"At_least_one_brother_or_sister": "At least one brother or sister"
+	"At_least_one_brother_or_sister": "At least one brother or sister",
+	"t_pfq_list": "Patronat Family Questionnaire List",
+	"t_add_patronat_family": "Add Patronat Family"
 }
