--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -130,5 +130,6 @@
 	"At_least_one_disability": "At least one disability",
 	"At_least_one_brother_or_sister": "At least one brother or sister",
 	"t_pfq_list": "Patronat Family Questionnaire List",
-	"t_add_patronat_family": "Add Patronat Family"
+	"t_add_patronat_family": "Add Patronat Family",
+	"The following fields are mandatory: IG1, IG2, IG3!": "The following fields are mandatory: IG1, IG2, IG3!"
 }
