--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -121,5 +121,7 @@
 	"t_total": "10. Total",
 	"t_total_value": "10",
 	"At_least_one_disability": "At least one disability",
-	"At_least_one_brother_or_sister": "At least one brother or sister"
+	"At_least_one_brother_or_sister": "At least one brother or sister",
+	"t_pfq_list": "t_pfq_list",
+	"t_add_patronat_family": "t_add_patronat_family"
 }
