--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -131,5 +131,8 @@
 	"At_least_one_brother_or_sister": "At least one brother or sister",
 	"t_pfq_list": "Patronat Family Questionnaire List",
 	"t_add_patronat_family": "Add Patronat Family",
-	"The following fields are mandatory: IG1, IG2, IG3!": "The following fields are mandatory: IG1, IG2, IG3!"
+	"The following fields are mandatory: IG1, IG2, IG3!": "The following fields are mandatory: IG1, IG2, IG3!",
+	"t_eef_list": "External evaluation form of the childcare institutions and boarding schools",
+	"t_add_evaluation": "Add evaluation",
+	"t_institution": "Institution"
 }
